Corrected Style Sheet

--- a/Exercises/exercise1.css
+++ b/Exercises/exercise1.css
@@ -3,7 +3,7 @@ P.Class2 {font: 12px;}
 P.Class3 {font-style: italic;}
 P.Class4 {margin: 2em;}
 P.Class5 { border-bottom:   1px solid lightgray;}
-P.Class6 {color #999;}
+P.Class6 {color: #999;}
 
 h1 {
     text-align: Center;
